--- a/netflix-clone/package.json
+++ b/netflix-clone/package.json
@@ -1,30 +1,25 @@
 {
   "name": "netflix-clone",
   "version": "0.0.0",
-  "private": false,
+  "private": true,
   "homepage": "https://Alebachew424.github.io/Netflix_2025",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
-    "axios": "^1.7.2",
-    "movie-trailer": "^3.1.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-youtube": "^10.1.0"
+    "axios": "^1.6.8",
+    "gh-pages": "^6.0.0",
+    "movie-trailer": "^2.0.4",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-youtube": "^10.0.0"
   },
   "devDependencies": {
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.3.1",
-    "eslint": "^9.7.0",
-    "eslint-plugin-react": "^7.35.0",
-    "gh-pages": "^6.0.0",
-    "vite": "^5.3.1"
+    "@vitejs/plugin-react": "^4.3.0",
+    "vite": "^5.0.0",
+    "babel-plugin-react-compiler": "^0.0.0-experimental"
   }
 }
